plugins {
    id 'java'
    id 'maven-publish'
}

group 'cn.apisium.shm'
version '0.0.2'

sourceCompatibility = JavaVersion.VERSION_19
targetCompatibility = JavaVersion.VERSION_19

repositories {
    mavenCentral()
}

java {
    withSourcesJar()
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:24.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview', '--enable-native-access=ALL-UNNAMED'])
}
